--- a/src/sass/partials/_header.scss
+++ b/src/sass/partials/_header.scss
@@ -18,6 +18,9 @@
       url('../images/header-image-home-desktop.jpg');
   }
 }
+.buttons-wrapper {
+  position: relative;
+}
 .header__links-container {
   display: flex;
   align-items: baseline;
