--- a/src/sass/partials/_pagination.scss
+++ b/src/sass/partials/_pagination.scss
@@ -14,7 +14,7 @@
   width: 40px !important;
   height: 40px !important;
   display: flex !important;
-  color: rgb(61, 61, 61) !important;
+  color: var(--text-color) !important;
   vertical-align: middle;
   font-size: 15px !important;
   line-height: 1.5 !important;
@@ -25,9 +25,20 @@
     width: 30px !important;
     height: 30px !important;
   }
+
+  &:hover,
+  &:focus {
+    background-color: $light-dark-bg-color !important;
+    color: $white-color !important;
+  }
+  .dark &:hover {
+    
+    background-color: $white-color !important;
+    color: $black-color !important;
+  }
   &.tui-is-selected {
-    background-color: #FF6B08 !important;
-    color: #fff !important;
+    background-color: $orange-color !important;
+    color: $white-color !important;
   }
 
   @media screen and (max-width: 768px) {
@@ -38,7 +49,9 @@
     &.tui-prev,
     &.tui-next {
      margin: 0 !important;
-      gap: 5px;
+     gap: 5px;
+      
     }
   }
 }
+
