--- a/src/sass/components/_select.scss
+++ b/src/sass/components/_select.scss
@@ -1,11 +1,12 @@
 .language-select {
   position: absolute;
-  right: 15px;
-  top: 80px;
-  display: inline-block;
+  top: -35px;
+  right: 0;
+  margin-left: auto;
+  display: block;
   width: 55px;
   height: 30px;
-  z-index: 30;
+  
   border-radius: 5px;
   background-color: $orange-color;
   font-weight: 700;
