--- a/src/sass/components/_select.scss
+++ b/src/sass/components/_select.scss
@@ -6,8 +6,24 @@
   display: block;
   width: 55px;
   height: 30px;
-  
+  font-weight: 500;
   border-radius: 5px;
-  background-color: $orange-color;
-  font-weight: 700;
 }
+  
+
+
+// .language-select {
+//   position: absolute;
+//   right: 100px;
+//   top: 10px;
+//   display: inline-block;
+//   width: 55px;
+//   height: 30px;
+//   z-index: 20;
+//   border-radius: 5px;
+//   font-weight: 500;
+//   @media screen and (min-width: 768px) {
+//     right: 15px;
+//     top: 80px;
+//   }
+// }
