--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -3,6 +3,7 @@
   margin-right: auto;
   background-color: var(--footer-background-color);
   padding: 29px 0 30px 0;
+  width: 100%;
   @media screen and (min-width: 768px) {
         padding: 30px 0 28px 0;
       }
@@ -22,7 +23,7 @@
     &>svg {
         fill: $orange-color;
     }
-    
+
 }
 @media screen and (max-width: 767px) {
     max-width: 250px;
