--- a/src/sass/partials/_modal.scss
+++ b/src/sass/partials/_modal.scss
@@ -118,7 +118,7 @@
   @media screen and (min-width: 768px){
     display: flex;
     justify-content: space-evenly;
-    overflow-y: auto;
+    overflow-y: inherit;
     max-height: inherit;
   }
 
