Подключен слайдер (нужно достилить)

--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -23,10 +23,10 @@
 
 
 <!-- The Modal -->
-<div id="myModal" class="modal">
+<!-- <div id="myModal" class="modal"> -->
 
     <!-- Modal content -->
-    <div class="modal-content">
+    <!-- <div class="modal-content">
         <div class="modal-header">
             <span class="close">&times;</span>
             <h2>Работа нашей команды</h2>
@@ -50,7 +50,7 @@
             <a class="btn btn-primary sergyi" href='#'><img class="member-photo-icon" src='./images/member_logo.jpg'></a>
         </div>
     </div> 
-    </div> 
+    </div>  -->
     <!-- style="pointer-events: none" -->
 
 <!-- </div> -->
@@ -63,3 +63,43 @@
     <a href="./images/member_logo.jpg"><img src="./images/member_logo.jpg" width="10%" height="10%" alt="Sergyi" title="Beautiful Image" /></a>
     <a href="./images/member_logo.jpg"><img src="./images/member_logo.jpg" width="10%" height="10%" alt="Sergyi" title="Beautiful Image" /></a>
 </div> -->
+
+<!-- Slider main container -->
+<div id="ds" class="swiper" style="display: none;">
+    <!-- Additional required wrapper -->
+    <div class="swiper-wrapper">
+        <!-- Slides -->
+        <div class="swiper-slide swiper-background">
+            <h2>Работа нашей команды</h2>
+            <div class="member-info-position">
+                <img class="member-photo" src="./images/member_logo.jpg" width="20%" height="20%" alt="AlexNumo"/>
+                <h3>AlexNumo</h3>
+                    <ul class="info-about-member-work">
+                        <li class="about-us-marker">Падающий снег</li>
+                        <li class="about-us-marker">Секция работа нашей команды</li>
+                    </ul>
+            </div>
+        </div>
+        <div class="swiper-slide swiper-background">
+            <h2>Работа нашей команды</h2>
+            <div class="member-info-position">
+                <img class="member-photo" src="./images/member_logo.jpg" width="20%" height="20%" alt="AlexNumo" />
+                <h3>Sergyi</h3>
+                <ul class="info-about-member-work">
+                    <li class="about-us-marker">Падающий снег</li>
+                    <li class="about-us-marker">Секция работа нашей команды</li>
+                </ul>
+            </div>
+
+        </div>
+    </div>
+    <!-- If we need pagination -->
+    <div class="swiper-pagination"></div>
+
+    <!-- If we need navigation buttons -->
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
+
+    <!-- If we need scrollbar -->
+    <div class="swiper-scrollbar"></div>
+</div>
