--- a/src/sass/partials/_about-us.scss
+++ b/src/sass/partials/_about-us.scss
@@ -67,92 +67,178 @@
 //   border-radius: 50%;
 // }
 
-/* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 650px;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
-  -webkit-animation-name: fadeIn; /* Fade in the background */
-  -webkit-animation-duration: 0.4s;
-  animation-name: fadeIn;
-  animation-duration: 0.4s;
-}
+// /* The Modal (background) */
+// .modal {
+//   display: none; /* Hidden by default */
+//   position: fixed; /* Stay in place */
+//   z-index: 1; /* Sit on top */
+//   left: 650px;
+//   top: 0;
+//   width: 100%; /* Full width */
+//   height: 100%; /* Full height */
+//   overflow: auto; /* Enable scroll if needed */
+//   background-color: rgb(0, 0, 0); /* Fallback color */
+//   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+//   -webkit-animation-name: fadeIn; /* Fade in the background */
+//   -webkit-animation-duration: 0.4s;
+//   animation-name: fadeIn;
+//   animation-duration: 0.4s;
+// }
 
-/* Modal Content */
-.modal-content {
-  position: fixed;
-  bottom: 0;
-  background-color: #fefefe;
+// /* Modal Content */
+// .modal-content {
+//   position: fixed;
+//   bottom: 0;
+//   background-color: #fefefe;
+//   width: 100%;
+//   -webkit-animation-name: slideIn;
+//   -webkit-animation-duration: 0.4s;
+//   animation-name: slideIn;
+//   animation-duration: 0.4s;
+// }
+
+// /* The Close Button */
+// .close {
+//   color: white;
+//   float: right;
+//   font-size: 28px;
+//   font-weight: bold;
+// }
+
+// .close:hover,
+// .close:focus {
+//   color: #000;
+//   text-decoration: none;
+//   cursor: pointer;
+// }
+
+// .modal-header {
+//   padding: 2px 16px;
+//   background-color: #5cb85c;
+//   color: white;
+// }
+
+// .modal-body {
+//   padding: 2px 16px;
+//   display: flex;
+//   // flex-wrap: wrap;
+//   // width: 300px;
+// }
+
+// .member-info-position {
+//   padding-left: 30px;
+// }
+
+// .modal-footer {
+//   padding: 2px 16px;
+//   background-color: #5cb85c;
+//   color: white;
+//   display: flex;
+// }
+
+// .btn-primary {
+//   padding-left: 15px;
+// }
+
+// .member-photo {
+//   width: 100px;
+//   height: 130px;
+//   border-radius: 50%;
+// }
+
+// .member-photo-icon {
+//   width: 50px;
+//   height: 50px;
+//   border-radius: 50%;
+// }
+
+// .info-about-member-work {
+//   display: flex;
+//   flex-direction: column;
+//   align-items: flex-start;
+// }
+
+// .about-us-marker {
+//   list-style-type: disc !important;
+// }
+
+// /* Add Animation */
+// @-webkit-keyframes slideIn {
+//   from {
+//     bottom: -300px;
+//     opacity: 0;
+//   }
+//   to {
+//     bottom: 0;
+//     opacity: 1;
+//   }
+// }
+
+// @keyframes slideIn {
+//   from {
+//     bottom: -300px;
+//     opacity: 0;
+//   }
+//   to {
+//     bottom: 0;
+//     opacity: 1;
+//   }
+// }
+
+// @-webkit-keyframes fadeIn {
+//   from {
+//     opacity: 0;
+//   }
+//   to {
+//     opacity: 1;
+//   }
+// }
+
+// @keyframes fadeIn {
+//   from {
+//     opacity: 0;
+//   }
+//   to {
+//     opacity: 1;
+//   }
+// }
+
+
+.swiper {
   width: 100%;
-  -webkit-animation-name: slideIn;
-  -webkit-animation-duration: 0.4s;
-  animation-name: slideIn;
-  animation-duration: 0.4s;
+  height: 100%;
 }
 
-/* The Close Button */
-.close {
-  color: white;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
+.member-photo{
+  border-radius: 600px;
 }
 
-.close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
+.swiper-background{
+  background-color: rgba($color: #6e67678f, $alpha: 1.0);
 }
 
-.modal-header {
-  padding: 2px 16px;
-  background-color: #5cb85c;
-  color: white;
-}
-
-.modal-body {
-  padding: 2px 16px;
-  display: flex;
-  // flex-wrap: wrap;
-  // width: 300px;
+.swiper-background h2{
+  text-align: center;
+  font-size: 35px;
+  padding-top: 20px;
 }
 
 .member-info-position {
-  padding-left: 30px;
-}
-
-.modal-footer {
-  padding: 2px 16px;
-  background-color: #5cb85c;
-  color: white;
   display: flex;
+    padding-top: 30px;
+  padding-bottom: 30px;
+  margin-left: 100px;
 }
 
-.btn-primary {
-  padding-left: 15px;
-}
-
-.member-photo {
-  width: 100px;
-  height: 130px;
-  border-radius: 50%;
-}
-
-.member-photo-icon {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
+.member-info-position h3{
+  padding-left: 50px;
+  font-size: 25px;
 }
 
 .info-about-member-work {
+  position: relative;
+  top: 40px;
+  right: 105px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -160,45 +246,4 @@
 
 .about-us-marker {
   list-style-type: disc !important;
-}
-
-/* Add Animation */
-@-webkit-keyframes slideIn {
-  from {
-    bottom: -300px;
-    opacity: 0;
-  }
-  to {
-    bottom: 0;
-    opacity: 1;
-  }
-}
-
-@keyframes slideIn {
-  from {
-    bottom: -300px;
-    opacity: 0;
-  }
-  to {
-    bottom: 0;
-    opacity: 1;
-  }
-}
-
-@-webkit-keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
 }
