--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -65,7 +65,7 @@
 </div> -->
 
 <!-- Slider main container -->
-<div id="ds" class="swiper" style="display: none;">
+<div class="swiper" style="display: none;">
     <!-- Additional required wrapper -->
     <div class="swiper-wrapper">
         <!-- Slides -->
