--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -5,7 +5,7 @@
         <svg width="14" height="13">
           <use href="../src/images/icons.svg#icon-love"></use></svg></span
       >by
-      <a id="myBtn" class="footer__link" href="#">GoIT Students</a>
+      <a id="myBtn" class="footer__link" href="#!">GoIT Students</a>
     </p>
   </div>
 </footer>
