--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -3,7 +3,7 @@
 <div class="modal js-info-modal" data-info-modal="card-film">
 <!--  <svg class="js-info-modal-close close-cross" alt="img" src="./images/icons.svg#icon-close"></svg>-->
     <svg class="js-info-modal-close close-cross" alt="img">
-    <use   href="./images/icons.svg#icon-Vector"></use>
+    <use   href="./images/icons.svg#icon-Vector" class="hover_focus"></use>
   </svg>
   <div class="info-modal-wrapper"></div>
 </div>
