--- a/src/sass/partials/_modal.scss
+++ b/src/sass/partials/_modal.scss
@@ -27,6 +27,11 @@
   background-color: var(--modal-window-bg-color);
   display: none;
   border-radius: 5px;
+  opacity: 1;
+  transition: opacity 2000ms cubic-bezier(0.4, 0, 0.2, 1),
+  visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+
 }
 
 .modal::after {
@@ -144,6 +149,7 @@
   width: 20px;
   height: 20px;
   cursor: pointer;
+  border-radius: 5px;
 
 }
 
@@ -323,4 +329,19 @@
 
 .capitalize{
   text-transform: capitalize;
+}
+
+
+.close-cross:hover,.close-cross:focus{
+  fill: $white-color;
+  background-color: $orange-color;
+  border-radius: 5px;
+  transition: fill, 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1),background-color, 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.rating-count{
+  margin-left: 3px;
+  background-color: #F7F7F7;
+  border-radius: 5px;
 }
