--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -21,13 +21,109 @@
             <div class="swiper-slide">
                 <div class="member-info-position">
                     <img class="member-photo" src="./images/member_logo.jpg" width="20%" height="20%" alt="AlexNumo" />
-                    <h3>Sergyi</h3>
+                    <h3>Сергей Шарашкин</h3>
                     <ul class="info-about-member-work">
-                        <li class="about-us-marker">Падающий снег</li>
-                        <li class="about-us-marker">Секция работа нашей команды</li>
+                        <li class="about-us-marker">Скрол наверх при выборе другой страницы в пагинации внизу</li>
+                        <li class="about-us-marker">По нажатию на кнопку "Add to watched" фильм добавляется
+                            в просмотренные фильмы текущего пользователя (local-storage)</li>
+                        <li class="about-us-marker">По нажатию на кнопку "Add to queue" фильм добавляется в
+                            очередь текущего пользователя (local-storage)</li>
+                        <li class="about-us-marker">По нажатию на кнопку "Watched" показываются просмотренные
+                            фильмы пользователя</li>
+                        <li class="about-us-marker">По нажатию на кнопку "Queue" показываются фильмы
+                            добавленные в очередь пользователя</li>
+                        <li class="about-us-marker">Скачать и подключить шрифты (кроссплатформенно)</li>
+                        <li class="about-us-marker">Создать паршалы для компонентов</li>
+                        <li class="about-us-marker">Вёрстка футера (мобилка, планшет, десктоп) (одинаковый для 
+                            двух страниц)</li>
+                        <li class="about-us-marker">Сверстать контейнер главной страницы для правильного 
+                            позиционирования карточек фильмов (мобилка, планшет, десктоп)</li>
+                        <li class="about-us-marker">Сверстать контейнер страницы "My Library" для правильного 
+                            позиционирования карточек фильмов (мобилка, планшет, десктоп)</li>
                     </ul>
                 </div>
-
+            </div>
+            <div class="swiper-slide">
+                <div class="member-info-position">
+                    <img class="member-photo" src="./images/member_logo.jpg" width="20%" height="20%" alt="AlexNumo" />
+                    <h3>Albert Takács</h3>
+                    <ul class="info-about-member-work">
+                        <li class="about-us-marker">Реализовано поиск и отрисовку фильмов по ключевому слову</li>
+                        <li class="about-us-marker">Сверстать шаблон карточки одного фильма</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="member-info-position">
+                    <img class="member-photo" src="./images/member_logo.jpg" width="20%" height="20%" alt="AlexNumo" />
+                    <h3>Natalia Bulanova</h3>
+                    <ul class="info-about-member-work">
+                        <li class="about-us-marker">По нажатию на кнопку "Add to watched" фильм добавляется 
+                            в просмотренные фильмы текущего пользователя (local-storage)</li>
+                        <li class="about-us-marker">По нажатию на кнопку "Add to queue" фильм добавляется в 
+                            очередь текущего пользователя (local-storage)</li>
+                        <li class="about-us-marker">По нажатию на кнопку "Watched" показываются просмотренные 
+                            фильмы пользователя</li>
+                        <li class="about-us-marker">По нажатию на кнопку "Queue" показываются фильмы 
+                            добавленные в очередь пользователя</li>
+                        <li class="about-us-marker">По нажатию на логотип/кнопку "Home" отрисовывается главная страница</li>
+                        <li class="about-us-marker">Реализовать подгрузку популярных фильмов на главную (первую) страницу</li>
+                        <li class="about-us-marker">По нажатию на логотип отрисовывается главная страница</li>
+                        <li class="about-us-marker">Создать модальное окно для вызова трейлера фильма по клику
+                        Если трейлера нет, ничего не выводить, чтобы не было ошибки</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="member-info-position">
+                    <img class="member-photo" src="./images/member_logo.jpg" width="20%" height="20%" alt="AlexNumo" />
+                    <h3>Евгений Кузьмин</h3>
+                    <ul class="info-about-member-work">
+                        <li class="about-us-marker">По нажатию на кнопку "Watched" показываются просмотренные
+                            фильмы пользователя</li>
+                        <li class="about-us-marker">По нажатию на кнопку "Queue" показываются фильмы
+                            добавленные в очередь пользователя</li>
+                        <li class="about-us-marker">Создать структуру проекта</li>
+                        <li class="about-us-marker">Сверстать хедер главной страницы (мобилка, планшет, десктоп)</li>
+                        <li class="about-us-marker">Сверстать хедер для страницы "My Library" (мобилка, планшет, десктоп)</li>
+                        <li class="about-us-marker">Сохранить иконки и создать спрайт</li>
+                        <li class="about-us-marker">Стандартная карточка для фичей</li>
+                        <li class="about-us-marker">Create Favicon</li>
+                        <li class="about-us-marker">Поправить пару строчек в файле, чтобы ссылки заработали</li>
+                        <li class="about-us-marker">Подключить/сверстать Loader (spinner) для асинхронных запросов</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="member-info-position">
+                    <img class="member-photo" src="./images/member_logo.jpg" width="20%" height="20%" alt="AlexNumo" />
+                    <h3>Максим Шершень</h3>
+                    <ul class="info-about-member-work">
+                        <li class="about-us-marker">По нажатию на карточку фильма на любой странице должна 
+                            открываться модалка с динамически подставленной информацией о фильме</li>
+                        <li class="about-us-marker">Реализовать закрытие модалки по нажатию на клавишу ESC и 
+                            по клику вне области модалки, не забыть снять слушатели</li>
+                        <li class="about-us-marker">Сверстать шаблон модалки одного фильма (мобилка, планшет, десктоп)
+                        снятие слушателя при закрытии</li>
+                        <li class="about-us-marker"></li>
+                        <li class="about-us-marker"></li>
+            
+                    </ul>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="member-info-position">
+                    <img class="member-photo" src="./images/member_logo.jpg" width="20%" height="20%" alt="AlexNumo" />
+                    <h3>vadger</h3>
+                    <ul class="info-about-member-work">
+                        <li class="about-us-marker">Создать дефолтную заглушку для старых фильмов</li>
+                        <li class="about-us-marker"></li>
+                        <li class="about-us-marker"></li>
+                        <li class="about-us-marker"></li>
+                        <li class="about-us-marker"></li>
+            
+                    </ul>
+                </div>
             </div>
         </div>
         <!-- If we need pagination -->
