--- a/src/sass/partials/_modal.scss
+++ b/src/sass/partials/_modal.scss
@@ -68,13 +68,16 @@
   }
   @media screen and (min-width: 1024px) {
     width: 396px;
+    height: 478px;
+    overflow: hidden;
+    border-radius: 5px;
   }
 }
 
 .modal__table-wrap {
   margin-top: 30px;
   @media screen and (min-width: 768px) {
-    width: 294px;
+    width: 264px;
     margin-top: 0px;
   }
   @media screen and (min-width: 1024px) {
