--- a/src/sass/partials/_header.scss
+++ b/src/sass/partials/_header.scss
@@ -64,7 +64,7 @@
 .header__home-link,
 .header__my-library-link {
   position: relative;
-
+  font-size: 12px;
   font-weight: 500;
   text-decoration: none;
   text-transform: uppercase;
