--- a/src/sass/partials/_modal.scss
+++ b/src/sass/partials/_modal.scss
@@ -154,7 +154,7 @@
 }
 
 
-  
+
   .dark .close-cross {
     fill: $white-color;
   }
@@ -330,10 +330,9 @@
 
 
 .close-cross:hover, .close-cross:focus {
-  fill: $white-color;
-  background-color: $orange-color;
+  fill: $orange-color;
   border-radius: 5px;
-  transition: fill, 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color, 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill, 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
