--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,5 +1,6 @@
 <!-- Slider main container -->
-<div class="swiper-position swiper-background swiper-anime" style="display: none;">
+<div class="backdrop-swiper" style="display: none;">
+<div class="swiper-position swiper-background swiper-anime">
     <h2>Работа нашей команды</h2>
     <svg class="close-cross js-swiper-close" alt="img">
         <use href="./images/icons.svg#icon-Vector"></use>
@@ -10,118 +11,85 @@
             <!-- Slides -->
             <div class="swiper-slide">
                 <div class="member-info-position">
-                    <img class="member-photo" src="./images/member_logo.jpg" width="20%" height="20%" alt="AlexNumo"/>
-                    <h3>AlexNumo</h3>
-                        <ul class="info-about-member-work">
-                            <li class="about-us-marker">Падающий снег</li>
-                            <li class="about-us-marker">Секция "Работа нашей команды"</li>
-                        </ul>
-                </div>
-            </div>
-            <div class="swiper-slide">
-                <div class="member-info-position">
-                    <img class="member-photo" src="./images/member_logo.jpg" width="20%" height="20%" alt="AlexNumo" />
+                    <img class="member-photo" src="./images/Sergiy.jpg" width="20%" height="20%" alt="Sergiy" />
                     <h3>Сергей Шарашкин</h3>
                     <ul class="info-about-member-work">
-                        <li class="about-us-marker">Скрол наверх при выборе другой страницы в пагинации внизу</li>
-                        <li class="about-us-marker">По нажатию на кнопку "Add to watched" фильм добавляется
-                            в просмотренные фильмы текущего пользователя (local-storage)</li>
-                        <li class="about-us-marker">По нажатию на кнопку "Add to queue" фильм добавляется в
-                            очередь текущего пользователя (local-storage)</li>
-                        <li class="about-us-marker">По нажатию на кнопку "Watched" показываются просмотренные
-                            фильмы пользователя</li>
-                        <li class="about-us-marker">По нажатию на кнопку "Queue" показываются фильмы
-                            добавленные в очередь пользователя</li>
-                        <li class="about-us-marker">Скачать и подключить шрифты (кроссплатформенно)</li>
-                        <li class="about-us-marker">Создать паршалы для компонентов</li>
-                        <li class="about-us-marker">Вёрстка футера (мобилка, планшет, десктоп) (одинаковый для 
-                            двух страниц)</li>
-                        <li class="about-us-marker">Сверстать контейнер главной страницы для правильного 
-                            позиционирования карточек фильмов (мобилка, планшет, десктоп)</li>
-                        <li class="about-us-marker">Сверстать контейнер страницы "My Library" для правильного 
-                            позиционирования карточек фильмов (мобилка, планшет, десктоп)</li>
+                        <li class="about-us-marker">Team Lead</li>
+                        <li class="about-us-marker">Структура проекта</li>
+                        <li class="about-us-marker">Настройка репозитория</li>
+                        <li class="about-us-marker">Футер</li>
+                        <li class="about-us-marker">Общую адаптивку</li>
+                        <li class="about-us-marker">Запись фильмов в Local Storage</li>
+                        <li class="about-us-marker">Скрол при пагинации</li>
                     </ul>
                 </div>
             </div>
             <div class="swiper-slide">
                 <div class="member-info-position">
-                    <img class="member-photo" src="./images/member_logo.jpg" width="20%" height="20%" alt="AlexNumo" />
+                    <img class="member-photo" src="./images/Albert.jpg" width="20%" height="20%" alt="Albert Takács" />
                     <h3>Albert Takács</h3>
                     <ul class="info-about-member-work">
-                        <li class="about-us-marker">Реализовано поиск и отрисовку фильмов по ключевому слову</li>
-                        <li class="about-us-marker">Сверстать шаблон карточки одного фильма</li>
+                        <li class="about-us-marker">Тёмная тема</li>
+                        <li class="about-us-marker">Мейн</li>
+                        <li class="about-us-marker">Карточка фильма</li>
                     </ul>
                 </div>
             </div>
             <div class="swiper-slide">
                 <div class="member-info-position">
-                    <img class="member-photo" src="./images/member_logo.jpg" width="20%" height="20%" alt="AlexNumo" />
+                    <img class="member-photo" src="./images/member.jpg" width="20%" height="20%" alt="Natalia Bulanova" />
                     <h3>Natalia Bulanova</h3>
                     <ul class="info-about-member-work">
-                        <li class="about-us-marker">По нажатию на кнопку "Add to watched" фильм добавляется 
-                            в просмотренные фильмы текущего пользователя (local-storage)</li>
-                        <li class="about-us-marker">По нажатию на кнопку "Add to queue" фильм добавляется в 
-                            очередь текущего пользователя (local-storage)</li>
-                        <li class="about-us-marker">По нажатию на кнопку "Watched" показываются просмотренные 
-                            фильмы пользователя</li>
-                        <li class="about-us-marker">По нажатию на кнопку "Queue" показываются фильмы 
-                            добавленные в очередь пользователя</li>
-                        <li class="about-us-marker">По нажатию на логотип/кнопку "Home" отрисовывается главная страница</li>
-                        <li class="about-us-marker">Реализовать подгрузку популярных фильмов на главную (первую) страницу</li>
-                        <li class="about-us-marker">По нажатию на логотип отрисовывается главная страница</li>
-                        <li class="about-us-marker">Создать модальное окно для вызова трейлера фильма по клику
-                        Если трейлера нет, ничего не выводить, чтобы не было ошибки</li>
+                        <li class="about-us-marker">Рендер библиотеки и страниц</li>
+                        <li class="about-us-marker">трейлер</li>
+                        <li class="about-us-marker">Локализация</li>
+                        <li class="about-us-marker">рефакторинг</li>
                     </ul>
                 </div>
             </div>
             <div class="swiper-slide">
                 <div class="member-info-position">
-                    <img class="member-photo" src="./images/member_logo.jpg" width="20%" height="20%" alt="AlexNumo" />
+                    <img class="member-photo" src="./images/Evgeniy.jpg" width="20%" height="20%" alt="Евгений Кузьмин" />
                     <h3>Евгений Кузьмин</h3>
                     <ul class="info-about-member-work">
-                        <li class="about-us-marker">По нажатию на кнопку "Watched" показываются просмотренные
-                            фильмы пользователя</li>
-                        <li class="about-us-marker">По нажатию на кнопку "Queue" показываются фильмы
-                            добавленные в очередь пользователя</li>
-                        <li class="about-us-marker">Создать структуру проекта</li>
-                        <li class="about-us-marker">Сверстать хедер главной страницы (мобилка, планшет, десктоп)</li>
-                        <li class="about-us-marker">Сверстать хедер для страницы "My Library" (мобилка, планшет, десктоп)</li>
-                        <li class="about-us-marker">Сохранить иконки и создать спрайт</li>
-                        <li class="about-us-marker">Стандартная карточка для фичей</li>
-                        <li class="about-us-marker">Create Favicon</li>
-                        <li class="about-us-marker">Поправить пару строчек в файле, чтобы ссылки заработали</li>
-                        <li class="about-us-marker">Подключить/сверстать Loader (spinner) для асинхронных запросов</li>
+                        <li class="about-us-marker">Scrum Master</li>
+                        <li class="about-us-marker">Хедер</li>
+                        <li class="about-us-marker">Нотификация</li>
+                        <li class="about-us-marker">Спрайт</li>
+                        <li class="about-us-marker">Фавикон</li>
+                        <li class="about-us-marker">Спинер</li>
                     </ul>
                 </div>
             </div>
             <div class="swiper-slide">
                 <div class="member-info-position">
-                    <img class="member-photo" src="./images/member_logo.jpg" width="20%" height="20%" alt="AlexNumo" />
+                    <img class="member-photo" src="./images/member.jpg" width="20%" height="20%" alt="Максим Шершень" />
                     <h3>Максим Шершень</h3>
                     <ul class="info-about-member-work">
-                        <li class="about-us-marker">По нажатию на карточку фильма на любой странице должна 
-                            открываться модалка с динамически подставленной информацией о фильме</li>
-                        <li class="about-us-marker">Реализовать закрытие модалки по нажатию на клавишу ESC и 
-                            по клику вне области модалки, не забыть снять слушатели</li>
-                        <li class="about-us-marker">Сверстать шаблон модалки одного фильма (мобилка, планшет, десктоп)
-                        снятие слушателя при закрытии</li>
-                        <li class="about-us-marker"></li>
-                        <li class="about-us-marker"></li>
-            
+                        <li class="about-us-marker">Модалка с информацией, её стилизация и адаптация</li>
                     </ul>
                 </div>
             </div>
             <div class="swiper-slide">
                 <div class="member-info-position">
-                    <img class="member-photo" src="./images/member_logo.jpg" width="20%" height="20%" alt="AlexNumo" />
-                    <h3>vadger</h3>
+                    <img class="member-photo" src="./images/Vadim.jpg" width="20%" height="20%" alt="Vadim Gerbeda" />
+                    <h3>Vadim Gerbeda</h3>
                     <ul class="info-about-member-work">
-                        <li class="about-us-marker">Создать дефолтную заглушку для старых фильмов</li>
-                        <li class="about-us-marker"></li>
-                        <li class="about-us-marker"></li>
-                        <li class="about-us-marker"></li>
-                        <li class="about-us-marker"></li>
-            
+                        <li class="about-us-marker">Запросы</li>
+                        <li class="about-us-marker">Пагинация</li>
+                        <li class="about-us-marker">Поиск по ключ слову</li>
+                        <li class="about-us-marker">Заглушки для фильмов без трейлера</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="member-info-position">
+                    <img class="member-photo" src="./images/member_logo.jpg" width="20%" height="20%" alt="Александр Арсенюк" />
+                    <h3>Александр Арсенюк</h3>
+                    <ul class="info-about-member-work">
+                        <li class="about-us-marker">Падающий снег</li>
+                        <li class="about-us-marker">Секция "Работа нашей команды"</li>
+                        <li class="about-us-marker">Подключился позже старта проекта</li>
                     </ul>
                 </div>
             </div>
@@ -136,4 +104,5 @@
         <!-- If we need scrollbar -->
         <div class="swiper-scrollbar"></div>
     </div>
+</div>
 </div>
