--- a/src/sass/partials/_about-us.scss
+++ b/src/sass/partials/_about-us.scss
@@ -1,10 +1,20 @@
+.backdrop-swiper{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba( 255, 0, 0, 0);
+  z-index: 110;
+}
+
 .swiper-fix {
   overflow: hidden;
 }
 
 .swiper-position {
-  width: 800px;
-  height: 800px;
+  width: 900px;
+  height: 350px;
   position: fixed;
   top: 25%;
   left: 25%;
@@ -54,13 +64,13 @@
 .member-info-position h3 {
   padding-left: 50px;
   font-size: 25px;
-  width: 500px;
+  width: 550px;
 }
 
 .info-about-member-work {
   position: relative;
   top: 40px;
-  right: 210px;
+  right: 235px;
   width: 650px;
   display: flex;
   flex-direction: column;
@@ -84,3 +94,4 @@
 //     transform: translateY(-150%);
 //   }
 // }
+
