Добавил стилизацию для разных устройств и анимацию

--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,6 +1,6 @@
 <!-- Slider main container -->
-<div class="backdrop-swiper" style="display: none;">
-<div class="swiper-position swiper-background swiper-anime">
+<div class="backdrop-swiper swiper-anime swiper-anime-close" style="display: none;">
+<div class="swiper-position swiper-background">
     <h2>Работа нашей команды</h2>
     <svg class="close-cross js-swiper-close" alt="img">
         <use href="./images/icons.svg#icon-Vector"></use>
@@ -37,7 +37,7 @@
             </div>
             <div class="swiper-slide">
                 <div class="member-info-position">
-                    <img class="member-photo" src="./images/member.jpg" width="20%" height="20%" alt="Natalia Bulanova" />
+                    <img class="member-photo" src="./images/Natalia.jpg" width="20%" height="20%" alt="Natalia Bulanova" />
                     <h3>Natalia Bulanova</h3>
                     <ul class="info-about-member-work">
                         <li class="about-us-marker">Рендер библиотеки и страниц</li>
