--- a/src/sass/partials/_about-us.scss
+++ b/src/sass/partials/_about-us.scss
@@ -1,10 +1,10 @@
-.backdrop-swiper{
+.backdrop-swiper {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba( 255, 0, 0, 0);
+  background: rgba(255, 0, 0, 0);
   z-index: 110;
 }
 
@@ -13,12 +13,20 @@
 }
 
 .swiper-position {
-  width: 900px;
-  height: 350px;
-  position: fixed;
-  top: 25%;
-  left: 25%;
-  margin: auto;
+  @media screen and (min-width: 768px) {
+    width: 700px;
+    height: 350px;
+  }
+  @media screen and (min-width: 1024px) {
+    width: 900px;
+    height: 350px;
+  }
+  width: 300px;
+  height: 250px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   z-index: 2;
   // background-color: transparent;
   border-radius: 30px;
@@ -32,6 +40,9 @@
 }
 
 .swiper {
+  @media screen and (min-width: 768px) {
+    height: 80%;
+  }
   width: 100%;
   height: 100%;
   position: static;
@@ -40,8 +51,16 @@
 .member-photo {
   border-radius: 600px;
   position: relative;
-  width: 200px;
-  height: 200px;
+  @media screen and (min-width: 768px) {
+    width: 180px;
+    height: 180px;
+  }
+  @media screen and (min-width: 1024px) {
+    width: 200px;
+    height: 200px;
+  }
+  width: 100px;
+  height: 100px;
 }
 
 .swiper-background {
@@ -49,8 +68,18 @@
 }
 
 .swiper-background h2 {
+  @media screen and (min-width: 768px) {
+    text-align: center;
+    font-size: 35px;
+    padding-top: 20px;
+  }
+  @media screen and (min-width: 1024) {
+    text-align: center;
+    font-size: 35px;
+    padding-top: 20px;
+  }
   text-align: center;
-  font-size: 35px;
+  font-size: 15px;
   padding-top: 20px;
 }
 
@@ -58,21 +87,59 @@
   display: flex;
   padding-top: 30px;
   padding-bottom: 30px;
-  margin-left: 100px;
+  @media screen and (min-width: 768px) {
+    margin-left: 70px;
+  }
+  @media screen and (min-width: 1024px) {
+    margin-left: 70px;
+  }
+  margin-left: 10px;
 }
 
 .member-info-position h3 {
+  @media screen and (min-width: 768px) {
+    position: absolute;
+    font-size: 25px;
+    top: 20px;
+    left: 230px;
+  }
+  @media screen and (min-width: 1024px) {
+    padding-left: 50px;
+    font-size: 25px;
+    width: 550px;
+    left: 260px;
+  }
+  position: absolute;
   padding-left: 50px;
-  font-size: 25px;
+  font-size: 12px;
   width: 550px;
+  top: 25px;
+  left: 80px;
 }
 
 .info-about-member-work {
+  @media screen and (min-width: 768px) {
+    position: absolute;
+    font-size: 20px;
+    top: 60px;
+    left: 300px;
+    width: 350px;
+  }
+  @media screen and (min-width: 1024px) {
+    position: absolute;
+    top: 55px;
+    left: 330px;
+    width: 650px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
   position: relative;
-  top: 40px;
-  right: 235px;
-  width: 650px;
+  top: 20px;
+  left: 25px;
+  width: 150px;
   display: flex;
+  font-size: 12px;
   flex-direction: column;
   align-items: flex-start;
 }
@@ -81,17 +148,81 @@
   list-style-type: disc !important;
 }
 
-// .swiper-anime {
-//   transform: translateY (10%);
-//   animation: ani 1s forwards;
+.swiper-button-next {
+  @media screen and (min-width: 768px) {
+    display: block;
+  }
+  display: none;
+}
+.swiper-button-prev {
+  @media screen and (min-width: 768px) {
+    display: block;
+  }
+  display: none;
+}
+
+.swiper-anime {
+  animation-name: slideUp;
+  -webkit-animation-name: slideUp;
+
+  animation-duration: 1s;
+  -webkit-animation-duration: 1s;
+
+  animation-timing-function: ease;
+  -webkit-animation-timing-function: ease;
+
+  visibility: visible !important;
+}
+
+@keyframes slideUp {
+  0% {
+    transform: translateY(100%);
+  }
+
+  100% {
+    transform: translateY(0%);
+  }
+}
+
+@-webkit-keyframes slideUp {
+  0% {
+    -webkit-transform: translateY(100%);
+  }
+
+  100% {
+    -webkit-transform: translateY(0%);
+  }
+}
+
+// .swiper-anime-close {
+//   animation-name: slideDown;
+//   -webkit-animation-name: slideDown;
+
+//   animation-duration: 1s;
+//   -webkit-animation-duration: 1s;
+
+//   animation-timing-function: ease;
+//   -webkit-animation-timing-function: ease;
+
+//   visibility: visible !important;
 // }
 
-// @keyframes ani {
+// @keyframes slideDown {
 //   0% {
-//     transform: translateX(0%);
+//     transform: translateY(100%);
 //   }
+
 //   100% {
-//     transform: translateY(-150%);
+//     transform: translateY(0%);
 //   }
 // }
 
+// @-webkit-keyframes slideDown {
+//   0% {
+//     -webkit-transform: translateY(100%);
+//   }
+
+//   100% {
+//     -webkit-transform: translateY(0%);
+//   }
+// }
