add inforamtion about me

--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -78,7 +78,10 @@
                         <li class="about-us-marker">Запросы</li>
                         <li class="about-us-marker">Пагинация</li>
                         <li class="about-us-marker">Поиск по ключ слову</li>
-                        <li class="about-us-marker">Заглушки для фильмов без трейлера</li>
+                        <li class="about-us-marker">Заглушки для фильмов</li>
+                        <li class="about-us-marker">Код ревью</li>
+                        <li class="about-us-marker">Рефакторинг</li>
+                        <li class="about-us-marker">Баг фикс</li>
                     </ul>
                 </div>
             </div>
