--- a/src/sass/partials/_about-us.scss
+++ b/src/sass/partials/_about-us.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(255, 0, 0, 0);
+  background: rgba(148, 138, 138, 0.5);
   z-index: 110;
 }
 
@@ -28,11 +28,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 2;
-  // background-color: transparent;
   border-radius: 30px;
-  box-shadow: 2px 12px 183px 200px rgba(46, 39, 39, 1);
-  -webkit-box-shadow: 2px 12px 183px 200px rgba(46, 39, 39, 1);
-  -moz-box-shadow: 2px 12px 183px 200px rgba(46, 39, 39, 1);
 }
 
 .swiper-active {
@@ -64,7 +60,7 @@
 }
 
 .swiper-background {
-  background-color: rgba($color: #e4dcdcf8, $alpha: 1);
+  background-color: rgba($color: #ffffff, $alpha: 1);
 }
 
 .swiper-background h2 {
@@ -176,53 +172,10 @@
 
 @keyframes slideUp {
   0% {
-    transform: translateY(100%);
+    opacity: 0;
   }
 
   100% {
-    transform: translateY(0%);
+    opacity: 1;
   }
 }
-
-@-webkit-keyframes slideUp {
-  0% {
-    -webkit-transform: translateY(100%);
-  }
-
-  100% {
-    -webkit-transform: translateY(0%);
-  }
-}
-
-// .swiper-anime-close {
-//   animation-name: slideDown;
-//   -webkit-animation-name: slideDown;
-
-//   animation-duration: 1s;
-//   -webkit-animation-duration: 1s;
-
-//   animation-timing-function: ease;
-//   -webkit-animation-timing-function: ease;
-
-//   visibility: visible !important;
-// }
-
-// @keyframes slideDown {
-//   0% {
-//     transform: translateY(100%);
-//   }
-
-//   100% {
-//     transform: translateY(0%);
-//   }
-// }
-
-// @-webkit-keyframes slideDown {
-//   0% {
-//     -webkit-transform: translateY(100%);
-//   }
-
-//   100% {
-//     -webkit-transform: translateY(0%);
-//   }
-// }
