--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -60,7 +60,7 @@
             <ul class="info-about-member-work">
               <li class="about-us-marker">Запросы</li>
               <li class="about-us-marker">Рендер библиотеки и страниц</li>
-              <li class="about-us-marker">Сохранение текущей вкладки</li>
+              <li class="about-us-marker">Сохранение стейта</li>
               <li class="about-us-marker">Трейлер</li>
               <li class="about-us-marker">Локализация</li>
               <li class="about-us-marker">Рефакторинг</li>
