Добавил фото Максима

--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -63,7 +63,7 @@
             </div>
             <div class="swiper-slide">
                 <div class="member-info-position">
-                    <img class="member-photo" src="./images/member.jpg" width="20%" height="20%" alt="Максим Шершень" />
+                    <img class="member-photo" src="./images/Maks.jpg" width="20%" height="20%" alt="Максим Шершень" />
                     <h3>Максим Шершень</h3>
                     <ul class="info-about-member-work">
                         <li class="about-us-marker">Модалка с информацией, её стилизация и адаптация</li>
